force-app/main/default/objects/PaymentPlanLine__c/PaymentPlanLine__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Line</label>
    <nameField>
        <displayFormat>PPL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>