force-app/main/default/objects/PaymentPlanLine__c/fields/DaysAfterCreation__c.field-meta.xml
<CustomField>
    <fullName>DaysAfterCreation__c</fullName>
    <label>Days After Creation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>