force-app/main/default/objects/PaymentPlanLine__c/fields/PaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlan__c</fullName>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Payment Plan Lines</relationshipLabel>
    <relationshipName>PaymentPlanLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>